test/errors/duplicate_func.kbn
夫倍者術也
答一
術畢
夫倍者術也
答二
術畢
